# Aergia

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/FluidSimulation2D/: CMakeLists.txt  FluidSimulator.cpp  FluidSimulator.h  MACGrid.cpp  MACGrid.h  ProceduralTexture.cpp  ProceduralTexture.h  SmokeSimulator.cpp  SmokeSimulator.h  fluidSimulation2D.cpp
examples/FluidSimulation2D/shaders/: advect.fs  advect.vs  decay.fs  diffuse.fs  diffuse.vs  divergence.fs  forces.fs  gradient.fs  heat.fs  jacobi.fs  renderScreen.fs  screenTexture.fs  simple.fs  simple.vs  smoke.fs
examples/ProceduralTerrains/: CMakeLists.txt  proceduralTerrains.cpp
examples/ProceduralTerrains/Shaders/: density.fs  density.vs  texture.fs  texture.vs
examples/ProceduralTerrains/shaders/: density.fs  density.vs  simpleNoise.fs  simpleNoise.gs  simpleNoise.vs  texture.fs  texture.vs
examples/Simple3D/: CMakeLists.txt  simple3D.cpp
examples/SimpleGUI/: CMakeLists.txt  simpleGUI.cpp
examples/SimpleGUI/assets/: defaultGUI  defaultGUI_atlas
examples/SimpleRTT/: CMakeLists.txt  atlas  simpleRTT.cpp
src/: Aergia.h
src/Algorithms/: Algorithms.h  FluidSimulator.cpp  FluidSimulator.h  MCTables.h  MarchingCubes.cpp  MarchingCubes.h  TerrainGenerator.cpp  TerrainGenerator.h
src/Common/: Config.cpp  Config.h  Constants.h  GLState.cpp  GLState.h
src/GUI/: GUI.cpp  GUI.h  GUIManager.cpp  GUIManager.h
src/GUI/Elements/: Button.cpp  Button.h  Slider.cpp  Slider.h
src/GUI/Graphics/: GUIUtils.cpp  GUIUtils.h  UIGraphic.cpp  UIGraphic.h  UIShapes.cpp  UIShapes.h
src/GUI/UI/: InteractionMethod.cpp  InteractionMethod.h  TrackMode.cpp  TrackMode.h  Trackball.cpp  Trackball.h  TrackballInterface.cpp  TrackballInterface.h
src/Graphics/: OpenGL.cpp  OpenGL.h
src/Graphics/Helpers/: Grid.cpp  Grid.h  Shapes.cpp  Shapes.h
src/Graphics/Rendering/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
src/Graphics/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  TMesh.h
src/IO/: DisplayUtils.cpp  DisplayUtils.h  GraphicsDisplay.cpp  GraphicsDisplay.h  InputMap.cpp  InputMap.h
src/IO/Resources/: FrameBuffer.cpp  FrameBuffer.h  ProceduralTexture.cpp  ProceduralTexture.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureManager.cpp  TextureManager.h
src/Math/: Line.cpp  Line.h  MathUtils.cpp  MathUtils.h  Plane.h  Sphere.h  Transform.cpp  Transform.h
src/Utils/: DebugLogger.cpp  DebugLogger.h
